# storage_mem_sim

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  __init__.py  memory_config.py  memory_engine.py  memory_metrics.py  memory_object.py  memory_request.py  memory_type.py  pyproject.toml  run.py  run_mqsim_16k_iops_12m_bw_200g.py
configs/: 16k_iops_12m_bw_200g_ssdconfig.xml  16k_iops_12m_bw_200g_workload.xml  analytic.json  ascend_a3_16ch_ssdconfig.xml  ascend_a3_16ch_workload.xml  default_ssdconfig.xml  mqsim.json  mqsim_16k_iops_12m_bw_200g.json  pm1753_ssdconfig.xml  pm1753_workload.xml  ramulator.json  ramulator.yaml
configs/ramulator/: ascend_a2_hbm.json  ascend_a2_hbm.yaml  ascend_a3_hbm.json  ascend_a3_hbm.yaml  ascend_a5_950dt_hbm.json  ascend_a5_950dt_hbm.yaml  ascend_a5_950pr_hbm.json  ascend_a5_950pr_hbm.yaml  host_ddr4_2tb_819p2gb_per_s_3200.json  host_ddr4_2tb_819p2gb_per_s_3200.yaml  host_ddr5_2tb_1331p2gb_per_s_5200.json  host_ddr5_2tb_1331p2gb_per_s_5200.yaml
configs/workloads/: kv_contiguous_page.json  kv_contiguous_token.json  kv_sparse_page.json  kv_sparse_page_local_token.json  kv_sparse_uniform_page.json  kv_sparse_uniform_token.json
demos/: demo_analytic.py  demo_multi_dp.py  demo_ramulator.py
docs/: MQSim_CWDP说明.md  MQSim_trace说明.md  MQSim_xml说明.md  MQSim后端说明.md  design.md  kv_cache_load_workload.md  ramulator_config.md  trace_generation_analysis.md
media/: __init__.py  analytic_media_system.py  base_media.py  media_backend.py  media_config.py  media_metrics.py  media_request.py  media_system_factory.py  mqsim_media_system.py  ramulator_media_system.py
media/mqsim_wrapper/: CMakeLists.txt  __init__.py  default_workload.xml  mqsim_params_report.md  mqsim_pybind.cpp  setup.py
media/mqsim_wrapper/pymqsim/: __init__.py  output.py  simulator.py  trace.py  workload.py
media/ramulator_wrapper/: setup.py
media/ramulator_wrapper/ramulator_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
memengine/: __init__.py  memory_config.py  memory_engine.py  memory_metrics.py  memory_object.py  memory_request.py  memory_type.py
tests/: __init__.py  ramulator_test_config.yaml  test_analytic_media.py  test_memory_engine.py  test_memory_engine_stub.py  test_memory_object.py  test_mqsim_media.py  test_ramulator_integration.py  test_ramulator_media.py
tests/config/: ascend_a3_16ch_ssdconfig.xml  ascend_a3_16ch_workload.xml  default_ssdconfig.xml  default_workload.xml  pm1753_ssdconfig.xml
tests/workload/: __init__.py
tests/workload/kv_cache_load/: __init__.py  test_analytic_integration.py  test_config_io.py  test_config_selector.py  test_layout_generator.py  test_mqsim_backend.py  test_ramulator_backend.py
workload/: __init__.py
workload/kv_cache_load/: __init__.py  config.py  generator.py  io.py  layout.py  metrics.py  selector.py
