[project]
name = "memengine"
version = "0.1.0"
description = "Multi-backend memory/storage media simulator"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ramulator_native: requires the Ramulator2 Python/native binding",
    "mqsim_native: requires the MQSim pybind11 binding",
]
